--- a/Air_Quality_Monitoring_4/apps/templates/home/ui-gatewayinfo.html
+++ b/Air_Quality_Monitoring_4/apps/templates/home/ui-gatewayinfo.html
@@ -489,7 +489,7 @@
                           <div class="col-7 col-stats">
                             <div class="numbers">
                               <p class="card-category">DRAM-BSS</p>
-                              <h4 class="card-title" id="mqtt-dram-bss"></h4>
+                              <h4 class="card-title" id="mqtt-dram-bss">16528 bytes</h4>
                             </div>
                           </div>
                         </div>
@@ -508,7 +508,7 @@
                           <div class="col-7 col-stats">
                             <div class="numbers">
                               <p class="card-category">DRAM-DATA</p>
-                              <h4 class="card-title" id="mqtt-dram-data"></h4>
+                              <h4 class="card-title" id="mqtt-dram-data">15588 bytes</h4>
                             </div>
                           </div>
                         </div>
@@ -530,7 +530,7 @@
                               <h4
                                 class="card-title"
                                 id="mqtt-dram-data-remaining"
-                              ></h4>
+                              >148620 remain</h4>
                             </div>
                           </div>
                         </div>
@@ -552,7 +552,7 @@
                               <h4
                                 class="card-title"
                                 id="mqtt-dram-porcentage"
-                              ></h4>
+                              >17.8%</h4>
                             </div>
                           </div>
                         </div>
@@ -573,7 +573,7 @@
                           <div class="col-7 col-stats">
                             <div class="numbers">
                               <p class="card-category">IRAM-TEXT</p>
-                              <h4 class="card-title" id="mqtt-iram-text"></h4>
+                              <h4 class="card-title" id="mqtt-iram-text">89471 bytes</h4>
                             </div>
                           </div>
                         </div>
@@ -595,7 +595,7 @@
                               <h4
                                 class="card-title"
                                 id="mqtt-iram-vectors"
-                              ></h4>
+                              >1027 bytes</h4>
                             </div>
                           </div>
                         </div>
@@ -617,7 +617,7 @@
                               <h4
                                 class="card-title"
                                 id="mqtt-iram-data-remaining"
-                              ></h4>
+                              >40574 remain</h4>
                             </div>
                           </div>
                         </div>
@@ -639,7 +639,7 @@
                               <h4
                                 class="card-title"
                                 id="mqtt-iram-porcentage"
-                              ></h4>
+                              >69.0%</h4>
                             </div>
                           </div>
                         </div>
@@ -660,7 +660,7 @@
                           <div class="col-7 col-stats">
                             <div class="numbers">
                               <p class="card-category">FLASH-SIZE</p>
-                              <h4 class="card-title" id="mqtt-flash-size"></h4>
+                              <h4 class="card-title" id="mqtt-flash-size">824181 bytes</h4>
                             </div>
                           </div>
                         </div>
@@ -682,7 +682,7 @@
                               <h4
                                 class="card-title"
                                 id="mqtt-flash-text"
-                              ></h4>
+                              >656183 bytes</h4>
                             </div>
                           </div>
                         </div>
@@ -704,7 +704,7 @@
                               <h4
                                 class="card-title"
                                 id="mqtt-flash-rodata"
-                              ></h4>
+                              >167742 bytes</h4>
                             </div>
                           </div>
                         </div>
@@ -726,7 +726,7 @@
                               <h4
                                 class="card-title"
                                 id="mqtt-iram-porcentage"
-                              ></h4>
+                              >930267 bytes</h4>
                             </div>
                           </div>
                         </div>
