--- a/Air_Quality_Monitoring_4/apps/templates/includes/sidebar.html
+++ b/Air_Quality_Monitoring_4/apps/templates/includes/sidebar.html
@@ -97,6 +97,13 @@
                   <span class="sub-item">Configuration</span>
                 </a>
               </li>
+               <li
+                class="{% if 'ui-gatewaymetrics' in segment %} active {% endif %}"
+              >
+                <a href="/ui-gatewaymetrics.html">
+                  <span class="sub-item">Metrics</span>
+                </a>
+              </li>
             </ul>
           </div>
          <!--AQUI-->
@@ -136,10 +143,10 @@
                 <div class="collapse" id="subnav2">
                   <ul class="nav nav-collapse subnav">
                     <li>
-                      <a href="#">
+                      <a href="/node2graphics.html">
                         <span class="sub-item">Graphics</span>
                       </a>
-					   <a href="#">
+					   <a href="/node2metrics.html">
                         <span class="sub-item">Metrics</span>
                       </a>
                     </li>
